# PluginGuiMagic

./: .gitignore  .gitmodules  CMakeLists.txt  Jenkinsfile  README.md
.github/workflows/: workflow.yml
docs/: APVTS__Tutorial_2PluginGuiMagic_8build_2Debug_2apvtsTutorial_8build_2Objects-normal_2arm64_2PluginProcessor_8d.html  APVTS__Tutorial_2PluginGuiMagic_8build_2Debug_2apvtsTutorial_8build_2Objects-normal_2arm64_2foleys__gui__magic_8d.html  APVTS__Tutorial_2PluginGuiMagic_8build_2Debug_2apvtsTutorial_8build_2Objects-normal_2arm64_2juce04bf1930309c1c5de548bcc90acd0e8d.html  APVTS__Tutorial_2PluginGuiMagic_8build_2Debug_2apvtsTutorial_8build_2Objects-normal_2arm64_2juce__audio__basics_8d.html  APVTS__Tutorial_2PluginGuiMagic_8build_2Debug_2apvtsTutorial_8build_2Objects-normal_2arm64_2juce__audio__devices_8d.html  APVTS__Tutorial_2PluginGuiMagic_8build_2Debug_2apvtsTutorial_8build_2Objects-normal_2arm64_2juce__audio__formats_8d.html  APVTS__Tutorial_2PluginGuiMagic_8build_2Debug_2apvtsTutorial_8build_2Objects-normal_2arm64_2juce__audio__processors_8d.html  APVTS__Tutorial_2PluginGuiMagic_8build_2Debug_2apvtsTutorial_8build_2Objects-normal_2arm64_2juce__audio__utils_8d.html  APVTS__Tutorial_2PluginGuiMagic_8build_2Debug_2apvtsTutorial_8build_2Objects-normal_2arm64_2juce__cryptography_8d.html  APVTS__Tutorial_2PluginGuiMagic_8build_2Debug_2apvtsTutorial_8build_2Objects-normal_2arm64_2juce__dsp_8d.html  APVTS__Tutorial_2PluginGuiMagic_8build_2Debug_2apvtsTutorial_8build_2Objects-normal_2arm64_2juce__gui__extra_8d.html  APVTS__Tutorial_2PluginGuiMagic_8build_2Debug_2apvtsTutorial_8build_2Objects-normal_2arm64_2juce__opengl_8d.html  APVTS__Tutorial_2PluginGuiMagic_8build_2Debug_2apvtsTutorial_8build_2Objects-normal_2x86__64_2PluginProcessor_8d.html  APVTS__Tutorial_2PluginGuiMagic_8build_2Debug_2apvtsTutorial_8build_2Objects-normal_2x86__64_2foleys__gui__magic_8d.html  APVTS__Tutorial_2PluginGuiMagic_8build_2Debug_2apvtsTutorial_8build_2Objects-normal_2x86__64_2ju404d3ddf11f8daa2f12d3a4b0ad12113.html  APVTS__Tutorial_2PluginGuiMagic_8build_2Debug_2apvtsTutorial_8build_2Objects-normal_2x86__64_2juce__audio__basics_8d.html  APVTS__Tutorial_2PluginGuiMagic_8build_2Debug_2apvtsTutorial_8build_2Objects-normal_2x86__64_2juce__audio__devices_8d.html  APVTS__Tutorial_2PluginGuiMagic_8build_2Debug_2apvtsTutorial_8build_2Objects-normal_2x86__64_2juce__audio__formats_8d.html  APVTS__Tutorial_2PluginGuiMagic_8build_2Debug_2apvtsTutorial_8build_2Objects-normal_2x86__64_2juce__audio__processors_8d.html  APVTS__Tutorial_2PluginGuiMagic_8build_2Debug_2apvtsTutorial_8build_2Objects-normal_2x86__64_2juce__audio__utils_8d.html  APVTS__Tutorial_2PluginGuiMagic_8build_2Debug_2apvtsTutorial_8build_2Objects-normal_2x86__64_2juce__cryptography_8d.html  APVTS__Tutorial_2PluginGuiMagic_8build_2Debug_2apvtsTutorial_8build_2Objects-normal_2x86__64_2juce__dsp_8d.html  APVTS__Tutorial_2PluginGuiMagic_8build_2Debug_2apvtsTutorial_8build_2Objects-normal_2x86__64_2juce__gui__extra_8d.html  APVTS__Tutorial_2PluginGuiMagic_8build_2Debug_2apvtsTutorial_8build_2Objects-normal_2x86__64_2juce__opengl_8d.html  APVTS__Tutorial_2PluginGuiMagic_8build_2Debug_2apvtsTutorial__AU_8build_2Objects-normal_2arm64_200c60d09b1fa3a9fa09eee3e286af657.html  APVTS__Tutorial_2PluginGuiMagic_8build_2Debug_2apvtsTutorial__AU_8build_2Objects-normal_2arm64_21a4f7f4a0b727446648118de66ecb4f5.html  APVTS__Tutorial_2PluginGuiMagic_8build_2Debug_2apvtsTutorial__AU_8build_2Objects-normal_2arm64_2299e77528dd79d2ab2738fe008de71cf.html  APVTS__Tutorial_2PluginGuiMagic_8build_2Debug_2apvtsTutorial__AU_8build_2Objects-normal_2arm64_22ab31d03bb75bb42da3b2ce45a8dbfde.html  APVTS__Tutorial_2PluginGuiMagic_8build_2Debug_2apvtsTutorial__AU_8build_2Objects-normal_2arm64_236fb4f6b25d5f7d804babf0950f36264.html  APVTS__Tutorial_2PluginGuiMagic_8build_2Debug_2apvtsTutorial__AU_8build_2Objects-normal_2arm64_23a9652ffd90c95ca1ba4449f6ddeafce.html  APVTS__Tutorial_2PluginGuiMagic_8build_2Debug_2apvtsTutorial__AU_8build_2Objects-normal_2arm64_252739ec574958dc27f8b28c0ea2864fc.html  APVTS__Tutorial_2PluginGuiMagic_8build_2Debug_2apvtsTutorial__AU_8build_2Objects-normal_2arm64_256eb16512135685707654f002ec9ae1b.html  APVTS__Tutorial_2PluginGuiMagic_8build_2Debug_2apvtsTutorial__AU_8build_2Objects-normal_2arm64_274516f1f7e9e4c83abeb035b6700ceae.html  APVTS__Tutorial_2PluginGuiMagic_8build_2Debug_2apvtsTutorial__AU_8build_2Objects-normal_2arm64_286008205c7f98d6cfe3e4f830e10b890.html  APVTS__Tutorial_2PluginGuiMagic_8build_2Debug_2apvtsTutorial__AU_8build_2Objects-normal_2arm64_28fc5431e21ff9bd669160f693be90007.html  APVTS__Tutorial_2PluginGuiMagic_8build_2Debug_2apvtsTutorial__AU_8build_2Objects-normal_2arm64_2cc4592b582d1479a7a1f58c78a568e8b.html  APVTS__Tutorial_2PluginGuiMagic_8build_2Debug_2apvtsTutorial__AU_8build_2Objects-normal_2arm64_2d8eb699a35e491ccaef5e0d220c8c33f.html  APVTS__Tutorial_2PluginGuiMagic_8build_2Debug_2apvtsTutorial__AU_8build_2Objects-normal_2arm64_2dfe9b4d244565565effc8166330cb06d.html  APVTS__Tutorial_2PluginGuiMagic_8build_2Debug_2apvtsTutorial__AU_8build_2Objects-normal_2x86__640f75f5969e772123edf814211d1689f0.html  APVTS__Tutorial_2PluginGuiMagic_8build_2Debug_2apvtsTutorial__AU_8build_2Objects-normal_2x86__641b3f204a39b66a47c1bdd89fa6828d2b.html  (+1339 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  (+99 more)
doxygen/: Doxyfile
examples/APVTS_Tutorial/: APVTS_Tutorial.jucer  CMakeLists.txt
examples/APVTS_Tutorial/Source/: PluginProcessor.cpp
(+37 files in other folders)
